<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
	http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.sing_group</groupId>
	<artifactId>compi</artifactId>
	<packaging>pom</packaging>
	<version>1.2.0-SNAPSHOT</version>
	<!--
		WARNING: change version using (in the parent project):
		mvn versions:set -DnewVersion=[new_version]
		mvn versions:commit

		This will change the version in all modules at-once
	-->

	<name>Compi</name>
	<description>Compi: Java Framework for Computational Pipelines</description>
	<url>http://www.sing-group.org/compi</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<dependency.locations.enabled>false</dependency.locations.enabled>

		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>

		<maven.surefire.plugin.version>2.19.1</maven.surefire.plugin.version>
		<maven.compiler.version>3.5</maven.compiler.version>
		<maven.assembly.version>2.6</maven.assembly.version>
		<maven.javadoc.version>2.10.3</maven.javadoc.version>
		<maven.resources.version>3.1.0</maven.resources.version>
		<maven-javadoc-plugin.version>3.0.1</maven-javadoc-plugin.version>
		<maven-project-info-reports-plugin.version>2.9</maven-project-info-reports-plugin.version>
		<sphinx-maven-plugin.version>2.2.3</sphinx-maven-plugin.version>
		<findbugs-maven-plugin.version>3.0.5</findbugs-maven-plugin.version>

		<junit.version>4.12</junit.version>	
		<javax.activation.activation.version>1.1</javax.activation.activation.version>
		<jaxb.version>2.2.11</jaxb.version>
		<yacli.version>2.1.0-SNAPSHOT</yacli.version>
		<httpclient.version>4.5.5</httpclient.version>
		<velocity.version>1.7</velocity.version>
	</properties>

	<modules>
		<module>core</module>
		<module>cli</module>
		<module>dk</module>
	</modules>

	<distributionManagement>
		<repository>
			<id>sing-maven-releases</id>
			<name>SING Maven Releases</name>
			<url>https://maven.sing-group.org/repository/maven-releases/</url>
		</repository>

		<snapshotRepository>
			<id>sing-maven-releases</id>
			<name>SING Maven Snapshots</name>
			<url>https://maven.sing-group.org/repository/maven-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>sing-repository</id>
			<name>SING repository</name>
			<url>https://maven.sing-group.org/repository/maven/</url>
		</repository>
		<repository>
			<id>sing-repository-snapshots</id>
			<name>SING repository snapshots</name>
			<url>https://maven.sing-group.org/repository/maven-snapshots/</url>
		</repository>
	</repositories>
	
	<dependencyManagement>
		<dependencies>
			<!-- java 9 and beyond deps (JAXB) -->
			<dependency>
				<groupId>javax.activation</groupId>
				<artifactId>activation</artifactId>
				<version>${javax.activation.activation.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.xml.bind</groupId>
				<artifactId>jaxb-api</artifactId>
				<version>${jaxb.version}</version>
			</dependency>
			<dependency>
				<groupId>com.sun.xml.bind</groupId>
				<artifactId>jaxb-impl</artifactId>
				<version>${jaxb.version}</version>
			</dependency>
			<dependency>
				<groupId>com.sun.xml.bind</groupId>
				<artifactId>jaxb-core</artifactId>
				<version>${jaxb.version}</version>
			</dependency>
			<!-- end of java 9 and beyond deps (JAXB) -->

			<!-- compi modules -->
			<dependency>
				<groupId>org.sing_group</groupId>
				<artifactId>compi-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>es.uvigo.ei.sing</groupId>
				<artifactId>yacli</artifactId>
				<version>${yacli.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>${httpclient.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.velocity</groupId>
				<artifactId>velocity</artifactId>
				<version>${velocity.version}</version>
			</dependency>
			<dependency>
			    <groupId>guru.nidi</groupId>
			    <artifactId>graphviz-java</artifactId>
			    <version>0.5.4</version>
			</dependency>
			<dependency>
			   <groupId>ch.qos.logback</groupId>
			   <artifactId>logback-classic</artifactId>
			   <version>1.2.3</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>${maven-javadoc-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven.surefire.plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>${maven-project-info-reports-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>kr.motd.maven</groupId>
					<artifactId>sphinx-maven-plugin</artifactId>
					<version>${sphinx-maven-plugin.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>generateDocs</id>
			<build>
				<plugins>
					<plugin>
						<groupId>kr.motd.maven</groupId>
						<artifactId>sphinx-maven-plugin</artifactId>
						<inherited>false</inherited>
						<configuration>
							<asReport>false</asReport>
							<sourceDirectory>${basedir}/docs/source</sourceDirectory>
							<outputDirectory>${basedir}/docs/build/html</outputDirectory>
						</configuration>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>generate</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>${findbugs-maven-plugin.version}</version>
			</plugin>
		</plugins>
	</reporting>
</project>
